--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,16 @@ services:
     ports:
       - 9090:9090
 
+  node-exporter:
+    image: prom/node-exporter:v1.10.2
+    command:
+      - "--path.rootfs"
+      - "/host"
+    pid: host
+    volumes:
+      - "/:/host:ro"
+    ports:
+      - "9100:9100"
 
 volumes:
   prometheus-data:
