--- a/prometheus/config.yaml
+++ b/prometheus/config.yaml
@@ -1,6 +1,14 @@
 global:
   scrape_interval: 15s
 
+rule_files:
+  - "rules/*.yaml"
+
+alerting:
+  alertmanagers:
+    - static_configs:
+        - targets:
+            - "alert-manager:9093"
 
 scrape_configs:
   - job_name: "prometheus"
@@ -8,6 +16,12 @@ scrape_configs:
     static_configs:
       - targets:
         - "localhost:9090"
+
+  - job_name: "alert-manager"
+    scrape_interval: 5s
+    static_configs:
+      - targets:
+          - "alert-manager:9093"
 
   - job_name: "node"
     scrape_interval: 5s
