Add instrumentation to webapp

--- a/webapp/pyproject.toml
+++ b/webapp/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi>=0.121.2",
+    "prometheus-fastapi-instrumentator>=7.1.0",
     "uvicorn>=0.38.0",
 ]
